# cardKnockout

./: README.rst  pyproject.toml
challenge_1/: cardKnockout.py  main.py
tests/: test_challenge_1.py
