[tool.poetry]
name = "challenge-1"
version = "0.1.0"
description = ""
authors = ["John Taborda <john.taborda@morningstar.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game = "challenge_1.game:play"
